--- a/style.css
+++ b/style.css
@@ -1,15 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
-    font-family: roboto, arial;
+    font-family: Roboto, arial;
     text-align: center;
     padding: 0;
     margin: 0;
+    min-height: 100%;
+    background-color: #f4fae3;
 }
 
 ul {
     margin: 0;
     padding: 0;
+    list-style: none;
  }
 
-ol {
-    list-style-position: inside;
+a {
+    text-decoration: none;
+    font-family: "Playfair Display";
+    font-size: 3em;
+    color: black;
+    display: inline-block;
+    position: relative;
 }
+
+a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(227, 178, 97);
+    transition: transform 0.7s ease-out;
+    transform-origin: bottom right;
+}
+
+a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+p {
+    font-family: "Montserrat";
+    color: black;
+    font-weight: 100;
+    text-transform: uppercase;
+}
+
+.dots {
+    color: rgb(227, 178, 97);
+    letter-spacing: 15px;
+    margin-right: -15px;
+    text-align: center;
+}
+
+#heading {
+    font-family: Ballet;
+    font-size: 5em;
+    font-weight: 400;
+}
+
+.container {
+    margin: auto;
+}
+
